[package]
name = "scope"
version = "0.1.0"
edition = "2024"

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["xtask"]

